--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-python-telegram-bot==20.7
-Flask==3.0.0
-python-dotenv==1.0.0
-google-api-python-client==2.108.0
-google-auth==2.23.4
+python-telegram-bot==21.4
+Flask==3.0.3
+python-dotenv==1.0.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
 PyPDF2==3.0.1
-python-docx==1.1.0
-groq==0.4.2
+python-docx==1.1.2
+groq==0.9.0
 apscheduler==3.10.4
-requests==2.31.0
-aiohttp==3.9.1
-rapidfuzz==3.6.0
-Pillow==11.0.0 --only-binary :all:
+requests==2.32.3
+aiohttp==3.9.5
+rapidfuzz==3.9.4
+Pillow==11.0.0
