--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ google-api-python-client==2.137.0
 google-auth==2.32.0
 PyPDF2==3.0.1
 python-docx==1.1.2
-groq==0.9.0
+groq==0.4.2
+httpx==0.27.0
 apscheduler==3.10.4
 requests==2.32.3
 aiohttp==3.9.5
